--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,9 @@
 @import "colours.css";
 
 * {
-    font-family: JetBrainsMono Nerd Font, sans-serif;
+    font-family:
+        JetBrainsMono Nerd Font,
+        sans-serif;
     font-size: 13pt;
     font-weight: bold;
     border: none;
@@ -30,7 +32,7 @@ window#waybar.solo {
 */
 
 window#waybar.termite {
-    background-color: #3F3F3F;
+    background-color: #3f3f3f;
 }
 
 window#waybar.chromium {
@@ -39,9 +41,9 @@ window#waybar.chromium {
 }
 
 /*button {*/
-    /* Use box-shadow instead of border so the text isn't offset */
-    /*box-shadow: inset 0 -3px transparent;*/
-    /* Avoid rounded borders under each button name *//*
+/* Use box-shadow instead of border so the text isn't offset */
+/*box-shadow: inset 0 -3px transparent;*/
+/* Avoid rounded borders under each button name */ /*
     border: none;
     border-radius: 0;
 }*/
@@ -93,6 +95,11 @@ window#waybar.chromium {
 window#waybar.empty #window {
     background-color: transparent;
     border-color: transparent;
+}
+
+#tray {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #wireplumber.muted {
